--- a/ChatServer.vcxproj
+++ b/ChatServer.vcxproj
@@ -138,6 +138,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc11</LanguageStandard_C>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,9 +158,11 @@
     <ClCompile Include="session.cpp" />
     <ClCompile Include="TextParser.cpp" />
     <ClCompile Include="Tracer.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChatLogic.h" />
+    <ClInclude Include="ChatProtocol.h" />
     <ClInclude Include="ChatServer.h" />
     <ClInclude Include="CNetServer.h" />
     <ClInclude Include="CPacket.h" />
@@ -168,11 +171,12 @@
     <ClInclude Include="LockFreeStack.h" />
     <ClInclude Include="MemoryPoolTls.h" />
     <ClInclude Include="monitor.h" />
-    <ClInclude Include="Protocol.h" />
+    <ClInclude Include="NetProtocol.h" />
     <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="session.h" />
     <ClInclude Include="TextParser.h" />
     <ClInclude Include="Tracer.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
